# mlflow-framework

./: Dockerfile.mlflow  Dockerfile.serve_model  README.md  docker-compose.yml
my_model/: pyproject.toml
my_model/data/: iris.csv.dvc
my_model/src/my_model/serving/: __main__.py
my_model/src/my_model/training/: train.py
